force-app/main/default/objects/Job_Process__c/Job_Process__c.object-meta.xml
<CustomObject>
    <label>Job Process</label>
    <nameField>
        <displayFormat>JP-{0000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>