force-app/main/default/objects/Job_Process__c/fields/Departure_Certificate_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Certificate_Date__c</fullName>
    <label>Departure Certificate Date</label>
    <type>Date</type>
</CustomField>