force-app/main/default/objects/Job_Process__c/fields/Enquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Id</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Job Processes</relationshipLabel>
    <relationshipName>Job_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>