force-app/main/default/objects/Job_Process__c/fields/Examination_Date__c.field-meta.xml
<CustomField>
    <fullName>Examination_Date__c</fullName>
    <label>Examination Date</label>
    <type>Date</type>
</CustomField>