force-app/main/default/objects/Job_Process__c/fields/File_Receive_date__c.field-meta.xml
<CustomField>
    <fullName>File_Receive_date__c</fullName>
    <label>File Receive date</label>
    <type>Date</type>
</CustomField>