force-app/main/default/objects/Job_Process__c/fields/Gross_weight_kgs__c.field-meta.xml
<CustomField>
    <fullName>Gross_weight_kgs__c</fullName>
    <label>Gross weight-kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>