force-app/main/default/objects/Job_Process__c/fields/IGM_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>IGM_Filed_Date__c</fullName>
    <label>IGM Filed Date</label>
    <type>Date</type>
</CustomField>