force-app/main/default/objects/Job_Process__c/fields/IGM_Item_No__c.field-meta.xml
<CustomField>
    <fullName>IGM_Item_No__c</fullName>
    <label>IGM Item No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>