force-app/main/default/objects/Job_Process__c/fields/Import_Document_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Import_Document_Rec_Date__c</fullName>
    <label>Import Document Rec Date</label>
    <type>Date</type>
</CustomField>