force-app/main/default/objects/Job_Process__c/fields/Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Time__c</fullName>
    <label>Job Time</label>
    <type>Date</type>
</CustomField>