force-app/main/default/objects/Job_Process__c/fields/Net_Packed_Volume__c.field-meta.xml
<CustomField>
    <fullName>Net_Packed_Volume__c</fullName>
    <label>Net Packed Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>CFT</fullName>
            </value>
            <value>
                <fullName>KGs</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>