force-app/main/default/objects/Job_Process__c/fields/Net_weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Net_weight_Kgs__c</fullName>
    <label>Net weight-Kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>