force-app/main/default/objects/Job_Process__c/fields/No_of_AV_s__c.field-meta.xml
<CustomField>
    <fullName>No_of_AV_s__c</fullName>
    <label>No of AV’s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>