force-app/main/default/objects/Job_Process__c/fields/No_of_Liftvans__c.field-meta.xml
<CustomField>
    <fullName>No_of_Liftvans__c</fullName>
    <label>No of Liftvans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>