force-app/main/default/objects/Job_Process__c/fields/Passport_Handover_date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Handover_date__c</fullName>
    <label>Passport Handover date</label>
    <type>Date</type>
</CustomField>