force-app/main/default/objects/Job_Process__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>