force-app/main/default/objects/Job_Process__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Job Processes</relationshipLabel>
    <relationshipName>Job_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>