force-app/main/default/objects/Job_Process__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Id</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Job Processes</relationshipLabel>
    <relationshipName>Job_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>