force-app/main/default/objects/Job_Process__c/fields/Shipper_Arrival_Date_India__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Arrival_Date_India__c</fullName>
    <label>Shipper Arrival Date India</label>
    <type>Date</type>
</CustomField>