force-app/main/default/objects/Job_Process__c/fields/Shipper_Contact_date__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Contact_date__c</fullName>
    <label>Shipper Contact date</label>
    <type>Date</type>
</CustomField>