force-app/main/default/objects/Job_Process__c/fields/Shipping_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Bill_No__c</fullName>
    <label>Shipping Bill No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>