force-app/main/default/objects/Job_Process__c/fields/Size_of_A_V_in_cms_LXBXH__c.field-meta.xml
<CustomField>
    <fullName>Size_of_A_V_in_cms_LXBXH__c</fullName>
    <label>Size of A/V in cms-LXBXH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>