force-app/main/default/objects/Job_Process__c/fields/Tare_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Tare_Weight_Kgs__c</fullName>
    <label>Tare Weight-Kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>