force-app/main/default/objects/Job_Process__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>import</fullName>
            </value>
            <value>
                <fullName>stuffing</fullName>
            </value>
            <value>
                <fullName>loading</fullName>
            </value>
            <value>
                <fullName>customs examination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>