force-app/main/default/objects/Job_Process__c/fields/Vessel_name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_name__c</fullName>
    <label>Vessel name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>