force-app/main/default/objects/Job_Process__c/fields/Warehouse_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_In_Date__c</fullName>
    <label>Warehouse In Date</label>
    <type>Date</type>
</CustomField>