force-app/main/default/objects/Job_Process__c/fields/Warehouse_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Out_Date__c</fullName>
    <label>Warehouse Out Date</label>
    <type>Date</type>
</CustomField>