force-app/main/default/objects/Job_Process__c/validationRules/Clearence_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Clearence_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Clearance_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Clearance_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>