force-app/main/default/objects/Job_Process__c/validationRules/Departure_Certificate_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Certificate_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Certificate_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Departure_Certificate_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>