force-app/main/default/objects/Job_Process__c/validationRules/Duty_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Duty_Payment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Duty_Payment_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Duty_Payment_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>