force-app/main/default/objects/Job_Process__c/validationRules/Examination_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Examination_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Examination_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Examination_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>