force-app/main/default/objects/Job_Process__c/validationRules/File_Open_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Open_Date</fullName>
    <active>true</active>
    <errorConditionFormula>File_Open_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>File_Open_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>