force-app/main/default/objects/Job_Process__c/validationRules/File_Receive_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Receive_Date</fullName>
    <active>true</active>
    <errorConditionFormula>File_Receive_date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>File_Receive_date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>