force-app/main/default/objects/Job_Process__c/validationRules/IGM_Field_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>IGM_Field_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IGM_Filed_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>IGM_Filed_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>