force-app/main/default/objects/Job_Process__c/validationRules/Import_Document_Rec_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Import_Document_Rec_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Import_Document_Rec_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Import_Document_Rec_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>