force-app/main/default/objects/Job_Process__c/validationRules/Passport_Handover_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Handover_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Passport_Handover_date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Passport_Handover_date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>