force-app/main/default/objects/Job_Process__c/validationRules/Shipper_Arrival_Date_India.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipper_Arrival_Date_India</fullName>
    <active>true</active>
    <errorConditionFormula>Shipper_Arrival_Date_India__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Shipper_Arrival_Date_India__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>