force-app/main/default/objects/Job_Process__c/validationRules/Shipper_Contact_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipper_Contact_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Shipper_Contact_date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Shipper_Contact_date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>