force-app/main/default/objects/Job_Process__c/validationRules/Warehouse_Out_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Warehouse_Out_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Warehouse_Out_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Warehouse_Out_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>